# collabobot

./: .env  .gitignore  Cargo.toml  readme.md
migrations/: 20231128_175059_projects.surql  20240320_152200_initial.surql
migrations/definitions/: _initial.json
schemas/: schema.planning
src/: appstate.rs  db.rs  internal_service_error.rs  lib.rs  main.rs  prelude.rs  projects.rs
