[package]
name = "collabobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
axum-server = "0.6.0"
chrono = "0.4.34"
color-eyre = "0.6.2"
eyre = "0.6.12"
serde = { version = "1.0.196", features = ["derive"] }
surrealdb = "1.1.1"
surrealdb-migrations = "1.0.1"
time = { version = "0.3.32", features = ["serde-human-readable"] }
time-fmt = "0.3.8"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
